--- a/FRONTEND/src/app/components/post/post.component.css
+++ b/FRONTEND/src/app/components/post/post.component.css
@@ -2,20 +2,42 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 100vh;
+  height: fit-content;
   width: 100vw;
   background-color: #111;
   z-index: 1;
 }
 
+.sub-post-container {
+  display: flex;
+}
+
+.user-section {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 10vh;
+  width: 30vw;
+  padding-top: 20vh;
+  padding-bottom: 5vh;
+}
+
+.user-info {
+  font-size: 4rem;
+  color: #fff;
+}
+
 .form-container {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  width: 70vw;
+  padding-top: 20vh;
+  padding-left: 5vw;
+  padding-right: 5vw;
+  padding-bottom: 5vh;
 }
 
 .post-form {
+  width: 30vw;
+  margin-left: 15vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -24,6 +46,7 @@
 }
 
 .post-form input,
+.post-form textarea,
 .post-form select {
   width: 100%;
   padding: 1.2rem;
@@ -31,13 +54,10 @@
   font-family: inherit;
   color: inherit;
   border: none;
+  color: #000;
   background-color: #ddd;
   border-radius: 9px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-}
-
-.post-form input {
-  color: #000;
 }
 
 .post-form input::placeholder {
@@ -48,8 +68,13 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  gap: 1rem;
   color: #eee;
   font-size: 2.4rem;
+}
+
+.post-field-description textarea {
+  height: 20vh;
 }
 
 .btn--form {
